--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "gsap": "./deps/gsap-bonus.tgz",
     "next": "^14.2.27",
+    "next-transition-router": "^0.2.9",
     "react": "^18",
     "react-dom": "^18"
   },
