--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@prismicio/react": "^3.2.0",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/typography": "^0.5.16",
-    "gsap": "./deps/gsap-bonus.tgz",
+    "gsap": "^3.13.0",
     "next": "^14.2.27",
     "next-transition-router": "^0.2.9",
     "react": "^18",
