--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@botpoison/browser": "^0.1.30",
     "@gsap/react": "^2.1.2",
     "@prismicio/client": "^7.17.1",
     "@prismicio/next": "^2.0.1",
